# FastAPI_Project-meteo

./: .gitignore  Dockerfile  README.md  data.db  database.py  main.py  models.py  pyproject.toml
templates/: weather.html
tests/: test_main.py
